[package]
name = "corrosion-generator"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
license = "MIT"
edition = "2018"

[dependencies]
cargo_metadata = "0.8.0"
semver = "0.9.0"
platforms = "0.2.1"

[dependencies.clap]
version = "2.33.0"
default-features = false

# Make sure this crate still compiles while it is checked out
# in a sub-directory of a repository that has a Cargo.toml. 
[workspace]
